cli/tests/snapshot/snapshots/snapshot__package_stderr_invalid-index-id.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: failed to evaluate package manifest

error: contract broken by the value of `package`
       package id failed to match the pattern `github:<org>/<repo>`
     ┌─ <stdlib/std.ncl>:3370:17
     │
3370 │               | PackageId
     │                 --------- expected type
     │
     ┌─ [INPUTS_PATH]/package/invalid-index-id.ncl:10:30
     │
  10 │     pkg = 'Index { package = "github/org/repo", version = "0.1.0" }
     │                              ^^^^^^^^^^^^^^^^^ applied to this expression
     │
     ┌─ <unknown> (generated by evaluation):1:1
     │
   1 │ "github/org/repo"
     │ ----------------- evaluated to this value
